todoyu core changelog

core 2.3.1 - not released yet
	* Added: Button for scrolling to top, that appears when scrolling down on long pages
	* Bugfix: Fixed css for error-messages of checkboxes
	* Bugifx: Fixed styling of quickinfo

core 2.3.0 - 2013-03-27
	* Added: CSS-cropping of list table content
	* Added: JS Array.prototype.remove - make array items removable
	* Added: Accept exclamation mark in link parsing
	* Added: Basic style for warning messages
	* Added: Possibility to add custom live-validator
	* Added: Basics for live-validation for form-fields
	* Added: TodoyuTime::getTimePartsDHMS()
	* Added: Todoyu.String.replaceAll()
	* Added: TodoyuHookManager::getHooks can now also get hooks anonymously (w/o name)
	* Added: Form element time was not available
	* Added: Todoyu.Form.isFirstInputInForm()
	* Added: TodoyuFormElement::removeAttribute()
	* Added: TodoyuFormElement_Select::setPleaseSelectLabel() to override label from php
	* Added: TodoyuFileManager::getMimeType() to detect the mime type of a file, even if mime_content_type() is not available
	* Added: TodoyuForm::setActionUrl() as helper for setAction()
	* Added: TodoyuFormElement_Button functions: setText(), setClass(), setOnClick()
	* Added: Option $asAttachment for TodoyuFileManager::sendFile() and TodoyuHeader::sendDownloadHeaders() to send also files directly
	* Added: Try to auto detect the mime type in TodoyuFileManager::sendFile() when not defined
	* Added: Params config value for FormRecords object which is submitted with the auto completer request. Allows passing options to the search
	* Added: TodoyuFormManager::addFieldType(). Cleaner replacement for form field type config like Todoyu::$CONFIG['FORM']['TYPES']['text'] = array(...)
	* Added: TodoyuFormManager::addFieldTypeRecords() as shortcut to TodoyuFormManager::addFieldType() with default records template
	* Added: $allOr parameter to TodoyuSql::buildLikeQueryPart() which changes the outer conjunction to OR