@@ -1,6 +1,7 @@
 todoyu core changelog
 
 core 2.3.1 - not released yet
+	* Added: Enlarged width of rte - input
 	* Added: Button for scrolling to top, that appears when scrolling down on long pages
 	* Bugfix: Fixed css for error-messages of checkboxes
 	* Bugifx: Fixed styling of quickinfo
